<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CompPlaneta">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/comparar_planetas"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <AutoCompleteTextView
        android:id="@+id/planeta1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:autoSizeMinTextSize="20sp"
        android:completionThreshold="1"
        android:hint="@string/planeta_1"
        app:layout_constraintEnd_toStartOf="@+id/planeta2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"/>

    <AutoCompleteTextView
        android:id="@+id/planeta2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:autoSizeMinTextSize="20sp"
        android:completionThreshold="1"
        android:hint="@string/planeta_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/planeta1"
        app:layout_constraintTop_toBottomOf="@+id/Title"/>

    <TextView
        android:id="@+id/diametroTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/diametro"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planeta1"/>


    <TextView
        android:id="@+id/distanciaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/distancia"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diametro1"/>

    <TextView
        android:id="@+id/densidadTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/densidad"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distancia1"/>


    <TextView
        android:id="@+id/diametro1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@color/light_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/diametro2"
        app:layout_constraintTop_toBottomOf="@+id/diametroTitle"/>


    <TextView
        android:id="@+id/diametro2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@color/light_purple"
        app:layout_constraintStart_toEndOf="@+id/diametro1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diametroTitle"/>


    <TextView
        android:id="@+id/distancia1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@color/light_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/distancia2"
        app:layout_constraintTop_toBottomOf="@+id/distanciaTitle"/>

    <TextView
        android:id="@+id/distancia2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@color/light_purple"
        app:layout_constraintStart_toEndOf="@+id/distancia1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distanciaTitle"/>

    <TextView
        android:id="@+id/densidad1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@color/light_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/densidad2"
        app:layout_constraintTop_toBottomOf="@+id/densidadTitle"/>

    <TextView
        android:id="@+id/densidad2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@color/light_purple"
        app:layout_constraintStart_toEndOf="@+id/densidad1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/densidadTitle"/>
</androidx.constraintlayout.widget.ConstraintLayout>